--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "normalize.css": "^7.0.0",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.18"
   },
