--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
   - "node"
+  - "9"
   - "8"
-  - "7"
   - "6"
 
 branches:
@@ -13,7 +13,7 @@ before_script:
   - "npm run lint"
 
 script:
-  - "npm run build"
+  - "npm run build -- --prod"
 
 deploy:
   provider: pages
@@ -22,7 +22,7 @@ deploy:
   on:
     branch: master
     node: "node"
-    
+
   local_dir: dist
   repo: TINF16C-WE2-IE/TINF16C-WE2-IE.github.io
   target_branch: master
